<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guide_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="16dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guide_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="16dp" />

        <View
            android:id="@+id/v_header"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@drawable/shape_header" />

        <ImageView
            android:layout_width="75dp"
            android:layout_height="60dp"
            android:src="@drawable/icone_app_beber_agua"
            android:layout_marginBottom="6dp"
            app:layout_constraintStart_toStartOf="@id/guide_start"
            app:layout_constraintTop_toTopOf="@id/v_header"
            app:layout_constraintBottom_toBottomOf="@id/v_header" />

        <ImageView
            android:id="@+id/ic_reset"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_refresh"

            app:layout_constraintEnd_toEndOf="@id/guide_end"
            app:layout_constraintBottom_toBottomOf="@id/v_header"
            app:layout_constraintTop_toTopOf="@id/v_header" />

        <EditText
            android:id="@+id/tv_weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/input_hint_weight"
            android:textColorHint="@color/blue_medium"
            android:backgroundTint="@color/blue_dark"
            app:layout_constraintTop_toBottomOf="@id/v_header"
            app:layout_constraintStart_toStartOf="@id/guide_start"
            android:layout_marginTop="18dp"
            android:padding="15dp"
            android:textColor="@color/blue_dark"
            android:textSize="18sp"
            android:textStyle="bold"
            android:inputType="numberDecimal"
            android:maxLength="7"
            android:gravity="center"/>

        <EditText
            android:id="@+id/tv_age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/input_hint_age"
            android:textColorHint="@color/blue_medium"
            android:backgroundTint="@color/blue_dark"
            app:layout_constraintTop_toBottomOf="@id/v_header"
            app:layout_constraintEnd_toEndOf="@id/guide_end"
            android:layout_marginTop="18dp"
            android:padding="15dp"
            android:textColor="@color/blue_dark"
            android:textSize="18sp"
            android:textStyle="bold"
            android:inputType="number"
            android:maxLength="3"
            android:gravity="center"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_calc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:text="@string/button_calc_water"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            android:padding="15dp"
            android:background="@drawable/shape_button"
            app:layout_constraintTop_toBottomOf="@id/tv_weight"
            app:layout_constraintStart_toStartOf="@id/guide_start"
            app:layout_constraintEnd_toEndOf="@id/guide_end" />

        <View
            android:id="@+id/v_result"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:background="@drawable/layer_list_result"
            android:layout_marginTop="18dp"
            app:layout_constraintTop_toBottomOf="@+id/btn_calc"
            app:layout_constraintStart_toStartOf="@id/guide_start"
            app:layout_constraintEnd_toEndOf="@id/guide_end" />

        <TextView
            android:id="@+id/tv_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/blue_dark"
            android:text=""
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:layout_constraintTop_toTopOf="@+id/v_result"
            app:layout_constraintStart_toStartOf="@id/v_result"
            app:layout_constraintEnd_toEndOf="@id/v_result"
            app:layout_constraintBottom_toBottomOf="@id/v_result"
            />

        <Button
            android:id="@+id/btn_reminder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textStyle="bold"
            android:textSize="14sp"
            android:gravity="center"
            android:text="@string/btn_title_reminder"
            android:backgroundTint="@color/blue_medium"
            app:layout_constraintTop_toBottomOf="@id/v_result"
            app:layout_constraintStart_toStartOf="@id/guide_start" />

        <Button
            android:id="@+id/btn_alarm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textStyle="bold"
            android:textSize="14sp"
            android:gravity="center"
            android:text="@string/btn_title_alarm"
            android:backgroundTint="@color/blue_medium"
            app:layout_constraintTop_toBottomOf="@id/v_result"
            app:layout_constraintEnd_toEndOf="@id/guide_end" />

        <TextView
            android:id="@+id/tv_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="00:00"
            android:textStyle="bold"
            android:textColor="@color/blue_dark"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            app:layout_constraintTop_toBottomOf="@+id/btn_reminder"
            app:layout_constraintStart_toStartOf="@id/guide_start"
            app:layout_constraintEnd_toEndOf="@id/guide_end"/>



    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>